# alignbooks-sdk

./: .env.example  .gitignore  LICENSE  README.md  endpoint_status.json  pyproject.toml
alignbooks/: __init__.py  api_service_map.json  auth.py  client.py  constants.py  exceptions.py  models.py
alignbooks/services/: __init__.py  _base.py  config.py  documents.py  finance.py  inventory.py  masters.py  purchase.py  reports.py  sales.py
docs/: API_REFERENCE.md
examples/: list_vendors.py
tests/: test_auth.py
